12/3 finish register, login, logout